# libacirc

./: .gitignore  CMakeLists.txt  Makefile.am  acirc.c  acirc.h  configure.ac  parse.y  readme.md
src/: Makefile.am  acirc.c  acirc.h.in  build.c  build.h  gmp.c  parse.y  scan.l  topo.c  utils.c  utils.h
src/commands/: fhe.c  fhe.h  obf.c  obf.h  outputs.c  outputs.h  secrets.c  secrets.h  test.c  test.h
test/: Makefile.am  add.acirc  test.c  test_builder.c  test_circ.acirc  test_circ.c  test_mpz.c  test_total_degree.acirc  test_total_degree.c
test/circuits/: test_circ.acirc  test_circ2.acirc  test_total_degree.acirc
